--- a/ecommerce.yml
+++ b/ecommerce.yml
@@ -1,6 +1,6 @@
 token:
-  expiration_time: 8640
-  secret: value2
+  expiration_time: 864000000
+  secret: user_token
 
 gateway:
   ip: 172.29.57.123
