--- a/user-service.yml
+++ b/user-service.yml
@@ -1,3 +1,6 @@
 token:
   expiration_time: 864000000
   secret: native-ecommerce-secret
+
+order_service:
+  url: http://127.0.0.1:8000/order-service/%s/orders
