--- a/user-service.yml
+++ b/user-service.yml
@@ -3,7 +3,9 @@ token:
   secret: native-ecommerce-secret
 
 order_service:
-  url: http://127.0.0.1:8000/order-service/%s/orders
+  url: http://ORDER-SERVICE:8000/order-service/%s/orders
+  exception:
+    orders_is_emtpy: "There is no item."
 
 gateway:
   ip: 172.18.0.3
